# LibMoE

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
assets/result_eval/: 11_15_completesmoe.txt  check_eval.txt  count_token_results.json  cumo_phi3_mini.json  cumo_phi3_mini_sigmoid.json  fix.txt  log_clipph3_dense.txt  log_phi35siglip_hyperrouter.txt  logg_purtunded.txt  logger_siglipphi3_smoe_half.txt  logger_smoe_half.txt  logger_smoe_half_eval.txt  logger_smoe_perturnded__half_eval.txt  logger_smoe_sigmoid_half.txt  logger_smollm_sigmoid_smoe_half.txt  logger_smollm_smoe_half.txt  mmvet-cumo_phi3_mini_half.json  mmvet_cumo_phi3_mini_perturnded.json  mmvet_cumo_phi3_mini_sigmoid_half.json  phi35mini_full_hyperrouter.txt  phi35mini_full_siglip_sft_smoe_cosinegating.txt  phi35mini_full_siglip_sft_smoe_perturbed.txt  phi35mini_full_siglip_sft_smoe_sigmoidgating.txt  phi35mini_full_siglip_sft_test_smoe.txt  phi35mini_hyperrouter.txt  phi35mini_siglip_dense_sft_origin.txt  phi35mini_siglip_pft.txt  phi35mini_siglip_pretrain.txt  phi35mini_siglip_sft_dynamic_dynamic_moe.txt  phi35mini_siglip_sft_en_smoe.txt  phi35mini_siglip_sft_smoe.txt  phi35mini_siglip_sft_smoe_perturbed.txt  phi35mini_siglip_sft_smoe_sigmoidgating.txt  phi35mini_test_siglip_pretrain.txt  phi3mini_clip_sft_.txt  phi3mini_clip_sft_10percent_smoe.txt  phi3mini_clip_sft_10percent_smoe_perturbed.txt  phi3mini_clip_sft_origin.txt  phi3mini_clip_sft_smoe_cosinegating.txt  phi3mini_clip_sft_smoe_perturbed.txt  (+11 more)
dataprep/: download.py  download.sh  read_data.py  sampling.py  test.ipynb
docs/: checkpoint_list.md  dataset_guide.md  model_guide.md
docs/pretrain_llm/: checkpoint_list.md  dataset_guide.md  getting_started.md  model_guide.md  moe_pretraining_config_guide.md
docs/sparse_upcyling/: checkpoint_list.md  dataset_guide.md  getting_started.md  instruction_analysis_moe_vlm.md  model_guide.md
evaluate/: gate_logits.txt  logs_active.txt  token
evaluate/analysis/: find_files.py  move_file.sh  visual_behavious_confident.py  visual_progress_training.ipynb
evaluate/lmms_eval/: __main__.py  evaluator.py  utils.py
language_modeling/: LM_README.md  environment.yml  main.py  requirements.txt  run.py
language_modeling/assets/: analyze_result_model_1000.ipynb  result-all-metrics.csv  result-benchmark-accuracy.csv  result-model-1000.pth.json  result-paper-table.csv  result-paper-table.xlsx
language_modeling/layers/: __init__.py  moe_layer.py  moe_layer_deepseekv2.py  moe_layer_deepseekv3.py  moe_layer_tc_moe.py
language_modeling/models/: transformer_language_model.py
language_modeling/scripts/: eval.sh  train.sh
language_modeling/tasks/: lm_eval_mixin.py  slimpajama_large_transformer.py  slimpajama_transformer.py  transformer_lm_mixin.py
moe_model/: test.ipynb
moe_model/model/: __init__.py  builder.py  llava_arch.py  utils.py
moe_model/serve/: app.py  cli.py  gradio_web_server.py
moe_model/train/: callback.py  llava_trainer.py  train.py  train_xformers.py
moeut_training_code/: deepspeed_config.json  extract_tensorboard_data.py  hehe.py  hehe2.py  info.txt  main_deepspeed.py  moe_default_moe.py  moe_plus_plus_author.py  remoe_author.py  run_deepspeed.py  tcmoe_author.py  test.ipynb  test.py
moeut_training_code/layers/: __init__.py  film_generator.py  moe_layer_deepseek_no_gatingbias.py  moe_layer_film.py  (+14 more)
pretrain_language_modeling/: .gitignore  README.md  requirements.txt
scripts/: setup_tmux.sh  zero3.json
vision_language_model/: requirements.txt  vlm_README.md
vision_language_model/evaluate/: pyproject.toml
vision_language_model/evaluate/analysis/: analyst_README.md  client.py  computemmstart.ipynb  llm.ipynb  llm.py  load_model.ipynb  run_llm.sh  server.py
vision_language_model/evaluate/analysis/libmoev2/: __init__.py  analyst_data.ipynb  convert_entropy.ipynb  convert_margin.ipynb  diversity.ipynb  drop_top1.ipynb  entropy_analyst.ipynb  init_gate.ipynb  init_weight.ipynb  progress_changes_selected.ipynb  progress_changes_selected_pretrain.ipynb  visual_data.ipynb
vision_language_model/evaluate/analysis/libmoev2/entropy_top3/: router_entropy_mmmu_val.json  router_entropy_mmstar.json
vision_language_model/evaluate/analysis/libmoev2/python/: __init__.py  analyst_plot_utils.py  constants.py  diversity_module.py  drop_top1_module.py  entropy_analyst_module.py  init_gate_module.py  init_weight_module.py  log_utils.py  progress_changes_selected_module.py  progress_changes_selected_pretrain_module.py  read_file_large.py  read_file_large_mm_projectors.py  read_file_large_saturation.py  router_metrics.py  selection_metrics.py  selection_pipeline.py  visual_data_module.py
vision_language_model/evaluate/analysis/libmoev2/router_margin/: router_margin_mmmu_val.json  router_margin_mmstar.json
vision_language_model/evaluate/lmms_eval/: __main__.py  evaluator.py  utils.py
vision_language_model/evaluate/lmms_eval/api/: exact_match.py  instance.py  metrics.py  registry.py  task.py  test.py
vision_language_model/evaluate/lmms_eval/models/: __init__.py  llava.py
vision_language_model/evaluate/lmms_eval/tasks/: __init__.py
vision_language_model/evaluate/lmms_eval/tasks/_task_utils/: file_utils.py
vision_language_model/evaluate/lmms_eval/tasks/ai2d/: ai2d.yaml
vision_language_model/evaluate/lmms_eval/tasks/hallusion_bench/: evaluate_hb.py  utils.py
vision_language_model/evaluate/lmms_eval/tasks/mathverse/: mathverse_evals.py
vision_language_model/evaluate/lmms_eval/tasks/mathvista/: mathvista_evals.py  mathvista_testmini.yaml  utils.py
vision_language_model/evaluate/lmms_eval/tasks/mme/: mme.yaml  utils.py
vision_language_model/evaluate/lmms_eval/tasks/mme_realworld/: mme_realworld_cn.yaml  mme_realworld_lite.yaml  utils.py
vision_language_model/evaluate/lmms_eval/tasks/mmmu_pro/: mmmu_pro_standard_cot.yaml
vision_language_model/evaluate/modules/evaluate_modules/metrics/evaluate-metric--exact_match/9d3b67e0c429cd7460b2b05aab53419b48eea369b73e1d9f185a56ca90c373d4/: exact_match.json
vision_language_model/evaluate/results/: result_metric_libmoev2_665k.json
(+458 files in other folders)
