[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LIBMoE"
version = "1.0"
description = "LIBMoE: A Library for comprehensive benchmarking Mixture of Experts in Large Language Models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "transformers==4.43.0", 
    "tokenizers==0.19.1", 
    "sentencepiece==0.1.99", 
    "shortuuid",
    "accelerate==0.31.0", 
    "peft", 
    "bitsandbytes",
    "pydantic", 
    "markdown2[all]", 
    "numpy", 
    "scikit-learn==1.2.2",
    "gradio==4.16.0", 
    "gradio_client==0.8.1",
    "requests", 
    "httpx==0.23.3", 
    "uvicorn", 
    "fastapi",
    "einops==0.6.1", 
    "einops-exts==0.0.4", 
    "timm==0.6.13",
]

[project.optional-dependencies]
train = ["deepspeed==0.13.4", "ninja", "wandb"]
build = ["build", "twine"]

[project.scripts]
moe-eval = "evaluate.lmms_eval.__main__:cli_evaluate"
moe-train = "moe_model.train.train_mem:main"

[tool.setuptools.packages.find]
where = ["evaluate", "lmms_eval", "moe_model", "moe_model.*"]

