[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libmoe"
version = "2.0.0"
description = "LibMoE v2 – unified Mixture-of-Experts research stack for language and vision-language models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nam V. Nguyen" },
    { name = "Thong T. Doan" },
    { name = "Luong Tran" },
    { name = "Van Nguyen" },
    { name = "Quang Pham" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "packaging>=23.0"
]

[project.optional-dependencies]
vlm = [
    "accelerate==0.31.0",
    "anls==0.0.2",
    "anthropic==0.37.1",
    "av==12.2.0",
    "beautifulsoup4==4.12.3",
    "bitsandbytes==0.43.1",
    "capture_metric==0.1.13",
    "dashscope==1.20.12",
    "datasets==2.16.1",
    "decord==0.6.0",
    "deepspeed==0.13.4",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "envparse==0.2.0",
    "fastapi==0.111.0",
    "gradio==4.16.0",
    "gradio_client==0.8.1",
    "hf_transfer==0.1.8",
    "huggingface_hub==0.24.3",
    "httpx==0.23.3",
    "jinja2==3.1.4",
    "loguru==0.7.2",
    "markdown2[all]==2.4.10",
    "matplotlib==3.9.0",
    "nltk==3.8.1",
    "openai==0.28.0",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python==4.10.0.84",
    "opencv-python-headless==4.10.0.84",
    "pandas==2.2.2",
    "peft==0.10.0",
    "pillow==10.3.0",
    "protobuf==5.27.1",
    "pycocoevalcap==1.2",
    "pycocotools==2.0.8",
    "pydantic>=1.10,<3",
    "pytablewriter==1.2.0",
    "pytest==8.3.3",
    "python-dotenv==1.0.1",
    "python-levenshtein==0.26.1",
    "pytz==2024.1",
    "pywsd==1.2.5",
    "pyyaml==6.0.1",
    "rouge==1.0.1",
    "sacrebleu==2.4.2",
    "safetensors==0.4.3",
    "scikit-learn==1.2.2",
    "sentence-transformers==3.0.1",
    "sentencepiece==0.1.99",
    "sglang==0.3.4.post2",
    "shortuuid==1.0.11",
    "spacy==3.7.5",
    "sqlitedict==2.1.0",
    "sympy==1.12.1",
    "tenacity==8.3.0",
    "timm==0.6.13",
    "tokenizers==0.19.1",
    "transformers==4.43.0",
    "uvicorn==0.30.1",
    "wandb==0.17.3",
    "xformers==0.0.27",
    "zss==1.2.0"
]
lm = [
    "cython>=0.29.36",
    "filelock>=3.13.0",
    "future>=0.18.3",
    "matplotlib>=3.8.0",
    "moviepy>=1.0.3",
    "ninja>=1.11.1",
    "plotly>=5.20.0",
    "psutil>=5.9.0",
    "python-hostlist>=1.23.0",
    "scikit-learn==1.2.2",
    "scipy>=1.11.0",
    "setproctitle>=1.3.3",
    "tensorboard>=2.14.0",
    "wandb==0.17.3",
    "pillow>=10.0.0",
    "tqdm>=4.66.0"
]
eval = [
    "google-generativeai>=0.7.0",
    "httpx==0.23.3",
    "reka-api>=0.0.9",
    "decord==0.6.0",
    "qwen_vl_utils>=0.0.6",
    "playwright>=1.41.0",
    "duckduckgo_search>=5.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "FlagEmbedding>=1.2.7"
]
dev = [
    "black>=24.3.0",
    "isort>=5.13.0",
    "ruff>=0.5.0"
]

[project.scripts]
moe-eval = "lmms_eval.__main__:cli_evaluate"
moe-train = "moe_model.train.train_mem:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["vision_language_model", "vision_language_model/evaluate", "language_modeling"]
include = [
    "moe_model*",
    "lmms_eval*",
    "framework*",
    "tasks*",
    "layers*",
    "models*",
    "interfaces*"
]

[tool.setuptools.package-data]
moe_model = ["**/*.json", "**/*.yaml"]
lmms_eval = ["**/*.json", "**/*.yaml"]
framework = ["**/*.yaml"]
